revert to old "createSessions" mechanics (with video and canvas parameters) and fix it to be compliant with preview cropping (available from SDK.js 5.0) If disableCropping: true is set in overlayConfig, the previous setElementDimensions()  (from src/utils.js) applied to container, canvas and video elements should be used .

--- a/sdk-web-js/public/styles.css
+++ b/sdk-web-js/public/styles.css
@@ -51,14 +51,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    max-width: 400px;
-    max-height: 400px;
     border-radius: 10px;
 }
 
 .canvas {
     z-index: 2;
-    transform: scaleX(-1);
 }
 
 .video {
@@ -121,7 +118,6 @@
 
 .output-video {
     width: 400px;
-    height: 268px;
 }
 
 .preset-selector {
